put puzzle table in a scrolling table if it gets too big. fix breadcrumb margin so we don't get right side scrollbar.

--- a/public/solvewith.css
+++ b/public/solvewith.css
@@ -65,3 +65,7 @@ html, body, iframe {
     margin-bottom: 3px;
     margin-top: 0px;
 }
+
+.breadcrumb {
+    margin-bottom: 8px;
+}
